Code Style 정리.