@@ -2,36 +2,36 @@ package com.example.serverprovision.management.bios.service;
 
 import com.example.serverprovision.global.exception.TypedNameMismatchException;
 import com.example.serverprovision.global.lifecycle.LifecycleStage;
-import com.example.serverprovision.management.bios.dto.request.BiosCreateRequest;
-import com.example.serverprovision.management.bios.dto.request.BiosRegisterExistingRequest;
-import com.example.serverprovision.management.bios.dto.request.BiosUpdateRequest;
-import com.example.serverprovision.management.bios.dto.response.BiosResponse;
-import com.example.serverprovision.management.bios.dto.response.BoardWithBiosListResponse;
-import com.example.serverprovision.management.common.dto.response.IntegrityStatusResponse;
-import com.example.serverprovision.management.bios.entity.BoardBIOS;
-import com.example.serverprovision.management.bios.enums.BiosUploadMode;
-import com.example.serverprovision.management.bios.exception.BiosNotFoundException;
-import com.example.serverprovision.management.bios.exception.BiosNudgeRequiredException;
-import com.example.serverprovision.management.bios.exception.DuplicateBiosVersionException;
-import com.example.serverprovision.management.bios.exception.IllegalBiosStateException;
-import com.example.serverprovision.management.common.nudge.NudgeRegistry;
-import com.example.serverprovision.management.common.nudge.NudgeResourceType;
-import com.example.serverprovision.management.common.nudge.NudgeSession;
-import com.example.serverprovision.management.common.nudge.dto.NudgeConflictEntry;
-import com.example.serverprovision.management.bios.repository.BiosRepository;
-import com.example.serverprovision.management.bios.service.BundleManifestService.ManifestSummary;
-import com.example.serverprovision.management.bios.vo.IntegrityStatus;
-import com.example.serverprovision.management.common.filesystem.service.BundleTreeCleanupService;
-import com.example.serverprovision.management.common.filesystem.service.TargetDirectoryPolicyService;
 import com.example.serverprovision.global.marker.MarkerContent;
 import com.example.serverprovision.global.marker.MarkerLayout;
 import com.example.serverprovision.global.marker.ResourceType;
 import com.example.serverprovision.global.marker.exception.MarkerMissingException;
 import com.example.serverprovision.global.marker.service.ProvisionMarkerService;
 import com.example.serverprovision.global.security.PathPolicyService;
+import com.example.serverprovision.management.bios.dto.request.BiosCreateRequest;
+import com.example.serverprovision.management.bios.dto.request.BiosRegisterExistingRequest;
+import com.example.serverprovision.management.bios.dto.request.BiosUpdateRequest;
+import com.example.serverprovision.management.bios.dto.response.BiosResponse;
+import com.example.serverprovision.management.bios.dto.response.BoardWithBiosListResponse;
+import com.example.serverprovision.management.bios.entity.BoardBIOS;
+import com.example.serverprovision.management.bios.enums.BiosUploadMode;
+import com.example.serverprovision.management.bios.exception.BiosNotFoundException;
+import com.example.serverprovision.management.bios.exception.BiosNudgeRequiredException;
+import com.example.serverprovision.management.bios.exception.DuplicateBiosVersionException;
+import com.example.serverprovision.management.bios.exception.IllegalBiosStateException;
+import com.example.serverprovision.management.bios.repository.BiosRepository;
+import com.example.serverprovision.management.bios.service.BundleManifestService.ManifestSummary;
+import com.example.serverprovision.management.bios.vo.IntegrityStatus;
 import com.example.serverprovision.management.board.entity.BoardModel;
 import com.example.serverprovision.management.board.exception.BoardModelNotFoundException;
 import com.example.serverprovision.management.board.repository.BoardModelRepository;
+import com.example.serverprovision.management.common.dto.response.IntegrityStatusResponse;
+import com.example.serverprovision.management.common.filesystem.service.BundleTreeCleanupService;
+import com.example.serverprovision.management.common.filesystem.service.TargetDirectoryPolicyService;
+import com.example.serverprovision.management.common.nudge.NudgeRegistry;
+import com.example.serverprovision.management.common.nudge.NudgeResourceType;
+import com.example.serverprovision.management.common.nudge.NudgeSession;
+import com.example.serverprovision.management.common.nudge.dto.NudgeConflictEntry;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -64,570 +64,590 @@ import java.util.stream.Collectors;
 @Transactional(readOnly = true)
 public class BiosService {
 
-    private final BiosRepository biosRepository;
-    private final BoardModelRepository boardModelRepository;
-    private final BundleExtractionService bundleExtractionService;
-    private final BundleEntrypointDetector bundleEntrypointDetector;
-    private final BundleManifestService bundleManifestService;
-    private final ProvisionMarkerService provisionMarkerService;
-    private final TargetDirectoryPolicyService targetDirectoryPolicyService;
-    private final BundleTreeCleanupService bundleTreeCleanupService;
-    private final PathPolicyService pathPolicyService;
-    private final NudgeRegistry nudgeRegistry;
-    private final com.example.serverprovision.global.trash.TrashLifecycleService trashLifecycleService;
-    private final com.example.serverprovision.global.lifecycle.SoftDeleteIntentService softDeleteIntentService;
+	private final BiosRepository biosRepository;
+	private final BoardModelRepository boardModelRepository;
+	private final BundleExtractionService bundleExtractionService;
+	private final BundleEntrypointDetector bundleEntrypointDetector;
+	private final BundleManifestService bundleManifestService;
+	private final ProvisionMarkerService provisionMarkerService;
+	private final TargetDirectoryPolicyService targetDirectoryPolicyService;
+	private final BundleTreeCleanupService bundleTreeCleanupService;
+	private final PathPolicyService pathPolicyService;
+	private final NudgeRegistry nudgeRegistry;
+	private final com.example.serverprovision.global.trash.TrashLifecycleService trashLifecycleService;
+	private final com.example.serverprovision.global.lifecycle.SoftDeleteIntentService softDeleteIntentService;
 
-    // ==== 조회 ========================================================
+	// ==== 조회 ========================================================
 
-    public List<BoardWithBiosListResponse> findAllGrouped(boolean includeDeleted) {
-        List<BoardModel> boards = includeDeleted
-                ? boardModelRepository.findAllByOrderByVendorAscCreatedAtDesc()
-                : boardModelRepository.findAllByIsDeletedFalseOrderByVendorAscCreatedAtDesc();
-        if (boards.isEmpty()) return List.of();
+	public List<BoardWithBiosListResponse> findAllGrouped(boolean includeDeleted) {
+		List<BoardModel> boards = includeDeleted
+				? boardModelRepository.findAllByOrderByVendorAscCreatedAtDesc()
+				: boardModelRepository.findAllByIsDeletedFalseOrderByVendorAscCreatedAtDesc();
+		if (boards.isEmpty()) return List.of();
 
-        List<Long> boardIds = boards.stream().map(BoardModel::getId).toList();
-        List<BoardBIOS> allBios = biosRepository.findAllByBoardModel_IdIn(boardIds);
-        Map<Long, List<BoardBIOS>> byBoard = allBios.stream()
-                .filter(b -> includeDeleted || !b.isDeleted())
-                .collect(Collectors.groupingBy(b -> b.getBoardModel().getId(), HashMap::new, Collectors.toList()));
+		List<Long> boardIds = boards.stream().map(BoardModel::getId).toList();
+		List<BoardBIOS> allBios = biosRepository.findAllByBoardModel_IdIn(boardIds);
+		Map<Long, List<BoardBIOS>> byBoard = allBios.stream()
+				.filter(b -> includeDeleted || !b.isDeleted())
+				.collect(Collectors.groupingBy(b -> b.getBoardModel().getId(), HashMap::new, Collectors.toList()));
 
-        return boards.stream()
-                .map(board -> new BoardWithBiosListResponse(
-                        board.getId(),
-                        board.getVendor(),
-                        board.getVendor().getDisplayName(),
-                        board.getModelName(),
-                        board.isDeleted(),
-                        byBoard.getOrDefault(board.getId(), List.of()).stream()
-                                .sorted(Comparator.comparing(BoardBIOS::getVersion).reversed())
-                                .map(BiosService::toResponse)
-                                .toList()
-                ))
-                .toList();
-    }
+		return boards.stream()
+				.map(board -> new BoardWithBiosListResponse(
+						board.getId(),
+						board.getVendor(),
+						board.getVendor().getDisplayName(),
+						board.getModelName(),
+						board.isDeleted(),
+						byBoard.getOrDefault(board.getId(), List.of()).stream()
+								.sorted(Comparator.comparing(BoardBIOS::getVersion).reversed())
+								.map(BiosService::toResponse)
+								.toList()
+				))
+				.toList();
+	}
 
-    public BiosResponse findBios(Long boardId, Long biosId) {
-        return toResponse(requireLiveBios(boardId, biosId));
-    }
+	public BiosResponse findBios(Long boardId, Long biosId) {
+		return toResponse(requireLiveBios(boardId, biosId));
+	}
 
-    public IntegrityStatusResponse findIntegrityStatus(Long boardId, Long biosId) {
-        BoardBIOS bios = requireLiveBios(boardId, biosId);
-        return IntegrityStatusResponse.of(
-                bios.getId(),
-                bios.getLastIntegrityStatus() != null ? bios.getLastIntegrityStatus() : IntegrityStatus.NOT_VERIFIED,
-                bios.getLastVerifiedAt()
-        );
-    }
+	public IntegrityStatusResponse findIntegrityStatus(Long boardId, Long biosId) {
+		BoardBIOS bios = requireLiveBios(boardId, biosId);
+		return IntegrityStatusResponse.of(
+				bios.getId(),
+				bios.getLastIntegrityStatus() != null ? bios.getLastIntegrityStatus() : IntegrityStatus.NOT_VERIFIED,
+				bios.getLastVerifiedAt()
+		);
+	}
 
-    // ==== 쓰기 연산 ====================================================
+	// ==== 쓰기 연산 ====================================================
 
-    @Transactional
-    public Long addBios(Long boardId,
-                        BiosCreateRequest request,
-                        BiosUploadMode uploadMode,
-                        MultipartFile[] folderFiles,
-                        MultipartFile zipFile,
-                        MultipartFile singleFile) {
-        BoardModel parent = requireActiveBoard(boardId);
+	@Transactional
+	public Long addBios(
+			Long boardId,
+			BiosCreateRequest request,
+			BiosUploadMode uploadMode,
+			MultipartFile[] folderFiles,
+			MultipartFile zipFile,
+			MultipartFile singleFile
+	) {
+		BoardModel parent = requireActiveBoard(boardId);
 
-        // 1) 활성 (board, version) 중복 검사
-        if (biosRepository.existsByBoardModel_IdAndVersionAndIsDeletedFalse(boardId, request.version())) {
-            throw new DuplicateBiosVersionException(boardId, request.version());
-        }
+		// 1) 활성 (board, version) 중복 검사
+		if (biosRepository.existsByBoardModel_IdAndVersionAndIsDeletedFalse(boardId, request.version())) {
+			throw new DuplicateBiosVersionException(boardId, request.version());
+		}
 
-        // S3 — allowlist 검증된 절대경로만 사용
-        Path targetDir = pathPolicyService.assertWritablePath(request.targetDirectory());
+		// S3 — allowlist 검증된 절대경로만 사용
+		Path targetDir = pathPolicyService.assertWritablePath(request.targetDirectory());
 
-        // MK2 — 자동 hard-delete 인라인 로직 제거. 동일 (board, version) SoftDeleted 자원이 있어도
-        //       즉시 purge 하지 않는다. 대신 단계 B (해시 비교) 에서 nudge 세션을 발급해 사용자 결정에 위임.
+		// MK2 — 자동 hard-delete 인라인 로직 제거. 동일 (board, version) SoftDeleted 자원이 있어도
+		//       즉시 purge 하지 않는다. 대신 단계 B (해시 비교) 에서 nudge 세션을 발급해 사용자 결정에 위임.
 
-        // 2) targetDirectory 상태 검증 — 상위 dir 존재 or allowCreateDirectory, 그리고 자기 자신이 비어있거나 부재
-        targetDirectoryPolicyService.prepareForUpload(targetDir, request.allowCreateDirectory());
+		// 2) targetDirectory 상태 검증 — 상위 dir 존재 or allowCreateDirectory, 그리고 자기 자신이 비어있거나 부재
+		targetDirectoryPolicyService.prepareForUpload(targetDir, request.allowCreateDirectory());
 
-        try {
-            // 3) 업로드 페이로드 전개 (extractionService 가 targetDirectory 생성 · 비어있음 검증을 내부 수행)
-            switch (uploadMode) {
-                case FOLDER -> bundleExtractionService.extractFolder(folderFiles, targetDir);
-                case ZIP -> bundleExtractionService.extractZip(zipFile, targetDir);
-                case SINGLE_FILE -> bundleExtractionService.extractSingleFile(singleFile, targetDir);
-            }
+		try {
+			// 3) 업로드 페이로드 전개 (extractionService 가 targetDirectory 생성 · 비어있음 검증을 내부 수행)
+			switch (uploadMode) {
+				case FOLDER -> bundleExtractionService.extractFolder(folderFiles, targetDir);
+				case ZIP -> bundleExtractionService.extractZip(zipFile, targetDir);
+				case SINGLE_FILE -> bundleExtractionService.extractSingleFile(singleFile, targetDir);
+			}
 
-            // 4) 진입점 탐지 (override 우선)
-            String entrypoint = bundleEntrypointDetector.detect(targetDir, request.entrypointRelativePath());
+			// 4) 진입점 탐지 (override 우선)
+			String entrypoint = bundleEntrypointDetector.detect(targetDir, request.entrypointRelativePath());
 
-            // 5) manifest 집계
-            ManifestSummary manifest = bundleManifestService.compute(targetDir);
+			// 5) manifest 집계
+			ManifestSummary manifest = bundleManifestService.compute(targetDir);
 
-            // 6) MK2 단계 B — 해시 충돌 후보 (SoftDeleted / Deprecated) 탐지 시 nudge 세션 발급 + 409.
-            //    임시 트리는 targetDir 에 그대로 남겨두고 사용자 결정 (proceed / replace / cancel) 대기.
-            //    BiosNudgeService 가 confirm 시점에 정식 영속화 또는 cleanup.
-            // MK3-1 — ghost (DB-only soft-deleted, FS 부재) 후보 사전 필터링.
-            List<BoardBIOS> hashCandidates = biosRepository.findHashConflictCandidates(boardId, manifest.manifestHash())
-                    .stream()
-                    .filter(c -> !com.example.serverprovision.global.trash.GhostEvaluator.isGhost(c))
-                    .toList();
-            if (!hashCandidates.isEmpty()) {
-                NudgeSession session = nudgeRegistry.register(
-                        NudgeResourceType.BIOS,
-                        boardId,
-                        hashCandidates.stream().map(BoardBIOS::getId).toList(),
-                        new com.example.serverprovision.management.common.nudge.ContentNudgePayload(
-                                request.name(),
-                                request.version(),
-                                manifest.manifestHash(),
-                                targetDir.toString(),
-                                Map.of(
-                                        "entrypointRelativePath", entrypoint,
-                                        "fileCount", String.valueOf(manifest.fileCount()),
-                                        "totalBytes", String.valueOf(manifest.totalBytes()),
-                                        "description", request.description() != null ? request.description() : ""
-                                )
-                        )
-                );
-                List<NudgeConflictEntry> entries = hashCandidates.stream()
-                        .map(b -> new NudgeConflictEntry(
-                                b.getId(),
-                                LifecycleStage.of(b.isDeprecated(), b.isDeleted()),
-                                b.getManifestHash(),
-                                b.getName(),
-                                b.getVersion(),
-                                java.time.Instant.now()))
-                        .toList();
-                log.info("[addBios] nudge required : boardId={}, version={}, candidates={}",
-                        boardId, request.version(), hashCandidates.size());
-                throw new BiosNudgeRequiredException(session, entries);
-            }
+			// 6) MK2 단계 B — 해시 충돌 후보 (SoftDeleted / Deprecated) 탐지 시 nudge 세션 발급 + 409.
+			//    임시 트리는 targetDir 에 그대로 남겨두고 사용자 결정 (proceed / replace / cancel) 대기.
+			//    BiosNudgeService 가 confirm 시점에 정식 영속화 또는 cleanup.
+			// MK3-1 — ghost (DB-only soft-deleted, FS 부재) 후보 사전 필터링.
+			List<BoardBIOS> hashCandidates = biosRepository.findHashConflictCandidates(boardId, manifest.manifestHash())
+					.stream()
+					.filter(c -> !com.example.serverprovision.global.trash.GhostEvaluator.isGhost(c))
+					.toList();
+			if (!hashCandidates.isEmpty()) {
+				NudgeSession session = nudgeRegistry.register(
+						NudgeResourceType.BIOS,
+						boardId,
+						hashCandidates.stream().map(BoardBIOS::getId).toList(),
+						new com.example.serverprovision.management.common.nudge.ContentNudgePayload(
+								request.name(),
+								request.version(),
+								manifest.manifestHash(),
+								targetDir.toString(),
+								Map.of(
+										"entrypointRelativePath", entrypoint,
+										"fileCount", String.valueOf(manifest.fileCount()),
+										"totalBytes", String.valueOf(manifest.totalBytes()),
+										"description", request.description() != null ? request.description() : ""
+								)
+						)
+				);
+				List<NudgeConflictEntry> entries = hashCandidates.stream()
+						.map(b -> new NudgeConflictEntry(
+								b.getId(),
+								LifecycleStage.of(b.isDeprecated(), b.isDeleted()),
+								b.getManifestHash(),
+								b.getName(),
+								b.getVersion(),
+								java.time.Instant.now()
+						))
+						.toList();
+				log.info(
+						"[addBios] nudge required : boardId={}, version={}, candidates={}",
+						boardId, request.version(), hashCandidates.size()
+				);
+				throw new BiosNudgeRequiredException(session, entries);
+			}
 
-            // 7) 2-phase save : 엔티티 선 저장 (signature=null) → biosId 획득
-            BoardBIOS saved = biosRepository.save(BoardBIOS.builder()
-                    .boardModel(parent)
-                    .name(request.name())
-                    .version(request.version())
-                    .treeRootPath(targetDir.toString())
-                    .entrypointRelativePath(entrypoint)
-                    .manifestHash(manifest.manifestHash())
-                    .markerSignature(null)
-                    .fileCount(manifest.fileCount())
-                    .totalBytes(manifest.totalBytes())
-                    .description(request.description())
-                    .isEnabled(true)
-                    .isDeleted(false)
-                    .build());
+			// 7) 2-phase save : 엔티티 선 저장 (signature=null) → biosId 획득
+			BoardBIOS saved = biosRepository.save(BoardBIOS.builder()
+														  .boardModel(parent)
+														  .name(request.name())
+														  .version(request.version())
+														  .treeRootPath(targetDir.toString())
+														  .entrypointRelativePath(entrypoint)
+														  .manifestHash(manifest.manifestHash())
+														  .markerSignature(null)
+														  .fileCount(manifest.fileCount())
+														  .totalBytes(manifest.totalBytes())
+														  .description(request.description())
+														  .isEnabled(true)
+														  .isDeleted(false)
+														  .build());
 
-            // 8) biosId 를 포함한 marker 생성 + 서명 + entity 갱신 + 파일 기록
-            MarkerContent unsigned = new MarkerContent(
-                    ResourceType.BIOS_BUNDLE.name(),
-                    saved.getId(),
-                    Map.of(
-                            "boardId", String.valueOf(boardId),
-                            "version", request.version(),
-                            "entrypointRelativePath", entrypoint
-                    ),
-                    Instant.now(),
-                    manifest.manifestHash(),
-                    null
-            );
-            String signature = provisionMarkerService.computeSignature(unsigned);
-            MarkerContent signed = unsigned.withSignature(signature);
-            saved.reissueMarker(manifest.manifestHash(), signature);
-            provisionMarkerService.write(targetDir, MarkerLayout.IN_TREE, signed);
+			// 8) biosId 를 포함한 marker 생성 + 서명 + entity 갱신 + 파일 기록
+			MarkerContent unsigned = new MarkerContent(
+					ResourceType.BIOS_BUNDLE.name(),
+					saved.getId(),
+					Map.of(
+							"boardId", String.valueOf(boardId),
+							"version", request.version(),
+							"entrypointRelativePath", entrypoint
+					),
+					Instant.now(),
+					manifest.manifestHash(),
+					null
+			);
+			String signature = provisionMarkerService.computeSignature(unsigned);
+			MarkerContent signed = unsigned.withSignature(signature);
+			saved.reissueMarker(manifest.manifestHash(), signature);
+			provisionMarkerService.write(targetDir, MarkerLayout.IN_TREE, signed);
 
-            log.info("[addBios] 등록 완료. biosId={}, boardId={}, version={}, fileCount={}, totalBytes={}",
-                    saved.getId(), boardId, request.version(), manifest.fileCount(), manifest.totalBytes());
-            return saved.getId();
-        } catch (BiosNudgeRequiredException nudge) {
-            // MK2 — nudge 분기는 임시 트리를 보존해야 confirm 시 ACTIVE 영속화가 가능하다.
-            // cleanup 대상에서 제외하고 그대로 위로 throw — 컨트롤러는 advice 가 처리.
-            throw nudge;
-        } catch (RuntimeException e) {
-            bundleTreeCleanupService.cleanupFailedUpload(targetDir, "purgeExistingTree", "addBios", e);
-            throw e;
-        }
-    }
+			log.info(
+					"[addBios] 등록 완료. biosId={}, boardId={}, version={}, fileCount={}, totalBytes={}",
+					saved.getId(), boardId, request.version(), manifest.fileCount(), manifest.totalBytes()
+			);
+			return saved.getId();
+		} catch (BiosNudgeRequiredException nudge) {
+			// MK2 — nudge 분기는 임시 트리를 보존해야 confirm 시 ACTIVE 영속화가 가능하다.
+			// cleanup 대상에서 제외하고 그대로 위로 throw — 컨트롤러는 advice 가 처리.
+			throw nudge;
+		} catch (RuntimeException e) {
+			bundleTreeCleanupService.cleanupFailedUpload(targetDir, "purgeExistingTree", "addBios", e);
+			throw e;
+		}
+	}
 
-    /**
-     * 기존 디렉토리를 BIOS 번들 자원으로 등록. 업로드 없이 이미 있는 트리를 claim.
-     * <p>업로드 경로의 {@link #addBios} 와 동일한 검증/마커 발급/nudge 흐름을 공유하되,
-     * 추출 단계만 생략한다. 자동 hard-delete 없이 해시 충돌 시 nudge 위임 정책도 동일.</p>
-     */
-    @Transactional
-    public Long registerExisting(Long boardId, BiosRegisterExistingRequest request) {
-        BoardModel parent = requireActiveBoard(boardId);
+	/**
+	 * 기존 디렉토리를 BIOS 번들 자원으로 등록. 업로드 없이 이미 있는 트리를 claim.
+	 * <p>업로드 경로의 {@link #addBios} 와 동일한 검증/마커 발급/nudge 흐름을 공유하되,
+	 * 추출 단계만 생략한다. 자동 hard-delete 없이 해시 충돌 시 nudge 위임 정책도 동일.</p>
+	 */
+	@Transactional
+	public Long registerExisting(Long boardId, BiosRegisterExistingRequest request) {
+		BoardModel parent = requireActiveBoard(boardId);
 
-        if (biosRepository.existsByBoardModel_IdAndVersionAndIsDeletedFalse(boardId, request.version())) {
-            throw new DuplicateBiosVersionException(boardId, request.version());
-        }
+		if (biosRepository.existsByBoardModel_IdAndVersionAndIsDeletedFalse(boardId, request.version())) {
+			throw new DuplicateBiosVersionException(boardId, request.version());
+		}
 
-        Path targetDir = pathPolicyService.assertWritablePath(request.targetDirectory());
-        // 업로드와 달리 자동 hard-delete 없이 nudge 흐름에 위임 — 정책 일관성 유지.
-        targetDirectoryPolicyService.prepareForExistingDirectoryRegistration(targetDir);
+		Path targetDir = pathPolicyService.assertWritablePath(request.targetDirectory());
+		// 업로드와 달리 자동 hard-delete 없이 nudge 흐름에 위임 — 정책 일관성 유지.
+		targetDirectoryPolicyService.prepareForExistingDirectoryRegistration(targetDir);
 
-        String entrypoint = bundleEntrypointDetector.detect(targetDir, request.entrypointRelativePath());
-        ManifestSummary manifest = bundleManifestService.compute(targetDir);
+		String entrypoint = bundleEntrypointDetector.detect(targetDir, request.entrypointRelativePath());
+		ManifestSummary manifest = bundleManifestService.compute(targetDir);
 
-        // MK3-1 — ghost 후보 사전 필터링.
-        List<BoardBIOS> hashCandidates = biosRepository.findHashConflictCandidates(boardId, manifest.manifestHash())
-                .stream()
-                .filter(c -> !com.example.serverprovision.global.trash.GhostEvaluator.isGhost(c))
-                .toList();
-        if (!hashCandidates.isEmpty()) {
-            NudgeSession session = nudgeRegistry.register(
-                    NudgeResourceType.BIOS,
-                    boardId,
-                    hashCandidates.stream().map(BoardBIOS::getId).toList(),
-                    new com.example.serverprovision.management.common.nudge.ContentNudgePayload(
-                            request.name(),
-                            request.version(),
-                            manifest.manifestHash(),
-                            targetDir.toString(),
-                            Map.of(
-                                    "entrypointRelativePath", entrypoint,
-                                    "fileCount", String.valueOf(manifest.fileCount()),
-                                    "totalBytes", String.valueOf(manifest.totalBytes()),
-                                    "description", request.description() != null ? request.description() : ""
-                            )
-                    )
-            );
-            List<NudgeConflictEntry> entries = hashCandidates.stream()
-                    .map(b -> new NudgeConflictEntry(
-                            b.getId(),
-                            LifecycleStage.of(b.isDeprecated(), b.isDeleted()),
-                            b.getManifestHash(),
-                            b.getName(),
-                            b.getVersion(),
-                            Instant.now()))
-                    .toList();
-            log.info("[registerExistingBios] nudge required : boardId={}, version={}, candidates={}",
-                    boardId, request.version(), hashCandidates.size());
-            throw new BiosNudgeRequiredException(session, entries);
-        }
+		// MK3-1 — ghost 후보 사전 필터링.
+		List<BoardBIOS> hashCandidates = biosRepository.findHashConflictCandidates(boardId, manifest.manifestHash())
+				.stream()
+				.filter(c -> !com.example.serverprovision.global.trash.GhostEvaluator.isGhost(c))
+				.toList();
+		if (!hashCandidates.isEmpty()) {
+			NudgeSession session = nudgeRegistry.register(
+					NudgeResourceType.BIOS,
+					boardId,
+					hashCandidates.stream().map(BoardBIOS::getId).toList(),
+					new com.example.serverprovision.management.common.nudge.ContentNudgePayload(
+							request.name(),
+							request.version(),
+							manifest.manifestHash(),
+							targetDir.toString(),
+							Map.of(
+									"entrypointRelativePath", entrypoint,
+									"fileCount", String.valueOf(manifest.fileCount()),
+									"totalBytes", String.valueOf(manifest.totalBytes()),
+									"description", request.description() != null ? request.description() : ""
+							)
+					)
+			);
+			List<NudgeConflictEntry> entries = hashCandidates.stream()
+					.map(b -> new NudgeConflictEntry(
+							b.getId(),
+							LifecycleStage.of(b.isDeprecated(), b.isDeleted()),
+							b.getManifestHash(),
+							b.getName(),
+							b.getVersion(),
+							Instant.now()
+					))
+					.toList();
+			log.info(
+					"[registerExistingBios] nudge required : boardId={}, version={}, candidates={}",
+					boardId, request.version(), hashCandidates.size()
+			);
+			throw new BiosNudgeRequiredException(session, entries);
+		}
 
-        BoardBIOS saved = biosRepository.save(BoardBIOS.builder()
-                .boardModel(parent)
-                .name(request.name())
-                .version(request.version())
-                .treeRootPath(targetDir.toString())
-                .entrypointRelativePath(entrypoint)
-                .manifestHash(manifest.manifestHash())
-                .markerSignature(null)
-                .fileCount(manifest.fileCount())
-                .totalBytes(manifest.totalBytes())
-                .description(request.description())
-                .isEnabled(true)
-                .isDeleted(false)
-                .build());
+		BoardBIOS saved = biosRepository.save(BoardBIOS.builder()
+													  .boardModel(parent)
+													  .name(request.name())
+													  .version(request.version())
+													  .treeRootPath(targetDir.toString())
+													  .entrypointRelativePath(entrypoint)
+													  .manifestHash(manifest.manifestHash())
+													  .markerSignature(null)
+													  .fileCount(manifest.fileCount())
+													  .totalBytes(manifest.totalBytes())
+													  .description(request.description())
+													  .isEnabled(true)
+													  .isDeleted(false)
+													  .build());
 
-        MarkerContent unsigned = new MarkerContent(
-                ResourceType.BIOS_BUNDLE.name(),
-                saved.getId(),
-                Map.of(
-                        "boardId", String.valueOf(boardId),
-                        "version", request.version(),
-                        "entrypointRelativePath", entrypoint
-                ),
-                Instant.now(),
-                manifest.manifestHash(),
-                null
-        );
-        String signature = provisionMarkerService.computeSignature(unsigned);
-        saved.reissueMarker(manifest.manifestHash(), signature);
-        provisionMarkerService.write(targetDir, MarkerLayout.IN_TREE, unsigned.withSignature(signature));
+		MarkerContent unsigned = new MarkerContent(
+				ResourceType.BIOS_BUNDLE.name(),
+				saved.getId(),
+				Map.of(
+						"boardId", String.valueOf(boardId),
+						"version", request.version(),
+						"entrypointRelativePath", entrypoint
+				),
+				Instant.now(),
+				manifest.manifestHash(),
+				null
+		);
+		String signature = provisionMarkerService.computeSignature(unsigned);
+		saved.reissueMarker(manifest.manifestHash(), signature);
+		provisionMarkerService.write(targetDir, MarkerLayout.IN_TREE, unsigned.withSignature(signature));
 
-        log.info("[registerExistingBios] 등록 완료. biosId={}, boardId={}, version={}, fileCount={}, totalBytes={}",
-                saved.getId(), boardId, request.version(), manifest.fileCount(), manifest.totalBytes());
-        return saved.getId();
-    }
+		log.info(
+				"[registerExistingBios] 등록 완료. biosId={}, boardId={}, version={}, fileCount={}, totalBytes={}",
+				saved.getId(), boardId, request.version(), manifest.fileCount(), manifest.totalBytes()
+		);
+		return saved.getId();
+	}
 
-    @Transactional
-    public void update(Long boardId, Long biosId, BiosUpdateRequest request) {
-        BoardBIOS bios = requireLiveBios(boardId, biosId);
-        if (!bios.getVersion().equals(request.version())
-                && biosRepository.existsByBoardModel_IdAndVersionAndIsDeletedFalse(boardId, request.version())) {
-            throw new DuplicateBiosVersionException(boardId, request.version());
-        }
-        bios.update(request.name(), request.version(), request.description());
-    }
+	@Transactional
+	public void update(Long boardId, Long biosId, BiosUpdateRequest request) {
+		BoardBIOS bios = requireLiveBios(boardId, biosId);
+		if (!bios.getVersion().equals(request.version())
+				&& biosRepository.existsByBoardModel_IdAndVersionAndIsDeletedFalse(boardId, request.version())) {
+			throw new DuplicateBiosVersionException(boardId, request.version());
+		}
+		bios.update(request.name(), request.version(), request.description());
+	}
 
-    /**
-     * S5-2-3-1 — 자식 BIOS 단독 toggle.
-     * 부모 가드 : 부모 Board 가 비활성/Deprecated 면 enable 거절.
-     */
-    @Transactional
-    public void toggleEnabled(Long boardId, Long biosId) {
-        BoardBIOS bios = requireLiveBios(boardId, biosId);
-        boolean nextEnabled = !bios.isEnabled();
-        if (nextEnabled) {
-            com.example.serverprovision.management.board.entity.BoardModel parent =
-                    boardModelRepository.findById(boardId).orElseThrow();
-            String parentState = !parent.isEnabled() ? "DISABLED"
-                    : parent.isDeprecated() ? "DEPRECATED" : null;
-            if (parentState != null) {
-                throw new com.example.serverprovision.global.exception.ChildLifecycleBlockedByParentException(
-                        com.example.serverprovision.global.marker.ResourceType.BOARD_MODEL,
-                        parent.getId(), parentState,
-                        com.example.serverprovision.global.marker.ResourceType.BIOS_BUNDLE,
-                        biosId, "enable",
-                        parent.displayName()
-                );
-            }
-        }
-        bios.toggleEnabled();
-    }
+	/**
+	 * S5-2-3-1 — 자식 BIOS 단독 toggle.
+	 * 부모 가드 : 부모 Board 가 비활성/Deprecated 면 enable 거절.
+	 */
+	@Transactional
+	public void toggleEnabled(Long boardId, Long biosId) {
+		BoardBIOS bios = requireLiveBios(boardId, biosId);
+		boolean nextEnabled = !bios.isEnabled();
+		if (nextEnabled) {
+			com.example.serverprovision.management.board.entity.BoardModel parent =
+					boardModelRepository.findById(boardId).orElseThrow();
+			String parentState = !parent.isEnabled() ? "DISABLED"
+					: parent.isDeprecated() ? "DEPRECATED" : null;
+			if (parentState != null) {
+				throw new com.example.serverprovision.global.exception.ChildLifecycleBlockedByParentException(
+						com.example.serverprovision.global.marker.ResourceType.BOARD_MODEL,
+						parent.getId(), parentState,
+						com.example.serverprovision.global.marker.ResourceType.BIOS_BUNDLE,
+						biosId, "enable",
+						parent.displayName()
+				);
+			}
+		}
+		bios.toggleEnabled();
+	}
 
-    /** MK3 — soft-delete BIOS. 도메인 가드 후 공통 trash 흐름 위임. MK3-2 사전조건 추가. */
-    @Transactional
-    public void softDelete(Long boardId, Long biosId) {
-        BoardBIOS bios = requireLiveBios(boardId, biosId);
-        // MK3-2 (DCM3-2.1) — Files.exists 사전조건. flag false 면 통과.
-        softDeleteIntentService.checkPrecondition(bios);
-        trashLifecycleService.softDeleteToTrash(bios);
-    }
+	/**
+	 * MK3 — soft-delete BIOS. 도메인 가드 후 공통 trash 흐름 위임. MK3-2 사전조건 추가.
+	 */
+	@Transactional
+	public void softDelete(Long boardId, Long biosId) {
+		BoardBIOS bios = requireLiveBios(boardId, biosId);
+		// MK3-2 (DCM3-2.1) — Files.exists 사전조건. flag false 면 통과.
+		softDeleteIntentService.checkPrecondition(bios);
+		trashLifecycleService.softDeleteToTrash(bios);
+	}
 
-    /**
-     * MK3-2 (DCM3-2.3 ~ 2.5) — softDelete reject modal 의 두 번째 호출 진입점.
-     */
-    @Transactional
-    public void softDeleteWithIntent(Long boardId, Long biosId,
-                                     com.example.serverprovision.global.lifecycle.DeleteAction action) {
-        switch (action) {
-            case CORRECT_PATH_THEN_DELETE -> softDeleteIntentService.reconcileThenDelete(
-                    com.example.serverprovision.global.marker.ResourceType.BIOS_BUNDLE, biosId,
-                    () -> {
-                        BoardBIOS refreshed = requireLiveBios(boardId, biosId);
-                        trashLifecycleService.softDeleteToTrash(refreshed);
-                    });
-            case FORCED_CLEAR -> softDeleteIntentService.forcedClear(
-                    com.example.serverprovision.global.marker.ResourceType.BIOS_BUNDLE, biosId);
-        }
-    }
+	/**
+	 * MK3-2 (DCM3-2.3 ~ 2.5) — softDelete reject modal 의 두 번째 호출 진입점.
+	 */
+	@Transactional
+	public void softDeleteWithIntent(
+			Long boardId, Long biosId,
+			com.example.serverprovision.global.lifecycle.DeleteAction action
+	) {
+		switch (action) {
+			case CORRECT_PATH_THEN_DELETE -> softDeleteIntentService.reconcileThenDelete(
+					com.example.serverprovision.global.marker.ResourceType.BIOS_BUNDLE, biosId,
+					() -> {
+						BoardBIOS refreshed = requireLiveBios(boardId, biosId);
+						trashLifecycleService.softDeleteToTrash(refreshed);
+					}
+			);
+			case FORCED_CLEAR -> softDeleteIntentService.forcedClear(
+					com.example.serverprovision.global.marker.ResourceType.BIOS_BUNDLE, biosId);
+		}
+	}
 
-    /**
-     * MK3 — restore BIOS. S5-2-3-1 부모 가드 추가 : 부모 Board 가 deleted 상태이면 자식 단독 restore 거절.
-     */
-    @Transactional
-    public void restore(Long boardId, Long biosId) {
-        com.example.serverprovision.management.board.entity.BoardModel parent =
-                boardModelRepository.findById(boardId).orElseThrow();
-        if (parent.isDeleted()) {
-            throw new com.example.serverprovision.global.exception.ChildLifecycleBlockedByParentException(
-                    com.example.serverprovision.global.marker.ResourceType.BOARD_MODEL,
-                    parent.getId(), "DELETED",
-                    com.example.serverprovision.global.marker.ResourceType.BIOS_BUNDLE,
-                    biosId, "restore",
-                    parent.displayName()
-            );
-        }
-        BoardBIOS bios = requireExistingBios(boardId, biosId);
-        if (biosRepository.existsByBoardModel_IdAndVersionAndIsDeletedFalse(boardId, bios.getVersion())) {
-            throw new DuplicateBiosVersionException(boardId, bios.getVersion());
-        }
-        trashLifecycleService.restoreFromTrash(bios, biosEntity -> java.util.Map.of(
-                "boardId", String.valueOf(boardId),
-                "version", biosEntity.getVersion(),
-                "entrypointRelativePath",
-                biosEntity.getEntrypointRelativePath() == null ? "" : biosEntity.getEntrypointRelativePath()));
-    }
+	/**
+	 * MK3 — restore BIOS. S5-2-3-1 부모 가드 추가 : 부모 Board 가 deleted 상태이면 자식 단독 restore 거절.
+	 */
+	@Transactional
+	public void restore(Long boardId, Long biosId) {
+		com.example.serverprovision.management.board.entity.BoardModel parent =
+				boardModelRepository.findById(boardId).orElseThrow();
+		if (parent.isDeleted()) {
+			throw new com.example.serverprovision.global.exception.ChildLifecycleBlockedByParentException(
+					com.example.serverprovision.global.marker.ResourceType.BOARD_MODEL,
+					parent.getId(), "DELETED",
+					com.example.serverprovision.global.marker.ResourceType.BIOS_BUNDLE,
+					biosId, "restore",
+					parent.displayName()
+			);
+		}
+		BoardBIOS bios = requireExistingBios(boardId, biosId);
+		if (biosRepository.existsByBoardModel_IdAndVersionAndIsDeletedFalse(boardId, bios.getVersion())) {
+			throw new DuplicateBiosVersionException(boardId, bios.getVersion());
+		}
+		trashLifecycleService.restoreFromTrash(
+				bios, biosEntity -> java.util.Map.of(
+						"boardId", String.valueOf(boardId),
+						"version", biosEntity.getVersion(),
+						"entrypointRelativePath",
+						biosEntity.getEntrypointRelativePath() == null ? "" : biosEntity.getEntrypointRelativePath()
+				)
+		);
+	}
 
-    /**
-     * MK2 — Active → Deprecated 전이. 엔티티 가드가 SoftDeleted / 이미 Deprecated 케이스를 거절.
-     * 현 시점에 SoftDeleted 자원에는 호출할 수 없으므로 {@code requireLiveBios} 사용 (삭제됨 → 409).
-     */
-    @Transactional
-    public void deprecate(Long boardId, Long biosId) {
-        requireLiveBios(boardId, biosId).deprecate();
-    }
+	/**
+	 * MK2 — Active → Deprecated 전이. 엔티티 가드가 SoftDeleted / 이미 Deprecated 케이스를 거절.
+	 * 현 시점에 SoftDeleted 자원에는 호출할 수 없으므로 {@code requireLiveBios} 사용 (삭제됨 → 409).
+	 */
+	@Transactional
+	public void deprecate(Long boardId, Long biosId) {
+		requireLiveBios(boardId, biosId).deprecate();
+	}
 
-    /**
-     * MK2 — Deprecated → Active 전이. 엔티티 가드가 부적합 상태를 거절.
-     * S5-2-3-1 부모 가드 : 부모 Board 가 deprecated 상태면 거절.
-     */
-    @Transactional
-    public void undeprecate(Long boardId, Long biosId) {
-        com.example.serverprovision.management.board.entity.BoardModel parent =
-                boardModelRepository.findById(boardId).orElseThrow();
-        if (parent.isDeprecated()) {
-            throw new com.example.serverprovision.global.exception.ChildLifecycleBlockedByParentException(
-                    com.example.serverprovision.global.marker.ResourceType.BOARD_MODEL,
-                    parent.getId(), "DEPRECATED",
-                    com.example.serverprovision.global.marker.ResourceType.BIOS_BUNDLE,
-                    biosId, "undeprecate",
-                    parent.displayName()
-            );
-        }
-        requireLiveBios(boardId, biosId).undeprecate();
-    }
+	/**
+	 * MK2 — Deprecated → Active 전이. 엔티티 가드가 부적합 상태를 거절.
+	 * S5-2-3-1 부모 가드 : 부모 Board 가 deprecated 상태면 거절.
+	 */
+	@Transactional
+	public void undeprecate(Long boardId, Long biosId) {
+		com.example.serverprovision.management.board.entity.BoardModel parent =
+				boardModelRepository.findById(boardId).orElseThrow();
+		if (parent.isDeprecated()) {
+			throw new com.example.serverprovision.global.exception.ChildLifecycleBlockedByParentException(
+					com.example.serverprovision.global.marker.ResourceType.BOARD_MODEL,
+					parent.getId(), "DEPRECATED",
+					com.example.serverprovision.global.marker.ResourceType.BIOS_BUNDLE,
+					biosId, "undeprecate",
+					parent.displayName()
+			);
+		}
+		requireLiveBios(boardId, biosId).undeprecate();
+	}
 
-    /**
-     * MK2 — SoftDeleted 자원의 영구 삭제. 트리·marker 물리 삭제 후 DB row 제거.
-     * SoftDeleted 가 아닌 자원에 호출되면 명시적 충돌로 거절 (활성 자원의 우발 영구 삭제 방어).
-     */
-    @Transactional
-    public void purge(Long boardId, Long biosId) {
-        BoardBIOS bios = requireExistingBios(boardId, biosId);
-        if (!bios.isDeleted()) {
-            throw new IllegalBiosStateException(
-                    "활성/Deprecated 자원은 영구 삭제할 수 없습니다. 먼저 휴지통으로 이동하세요. biosId=" + biosId);
-        }
-        bundleTreeCleanupService.purgeExistingTree(Path.of(bios.getTreeRootPath()), "purgeBios");
-        biosRepository.delete(bios);
-        log.info("[purge] biosId={}, boardId={}, treeRoot={}", biosId, boardId, bios.getTreeRootPath());
-    }
+	/**
+	 * MK2 — SoftDeleted 자원의 영구 삭제. 트리·marker 물리 삭제 후 DB row 제거.
+	 * SoftDeleted 가 아닌 자원에 호출되면 명시적 충돌로 거절 (활성 자원의 우발 영구 삭제 방어).
+	 */
+	@Transactional
+	public void purge(Long boardId, Long biosId) {
+		BoardBIOS bios = requireExistingBios(boardId, biosId);
+		if (!bios.isDeleted()) {
+			throw new IllegalBiosStateException(
+					"활성/Deprecated 자원은 영구 삭제할 수 없습니다. 먼저 휴지통으로 이동하세요. biosId=" + biosId);
+		}
+		bundleTreeCleanupService.purgeExistingTree(Path.of(bios.getTreeRootPath()), "purgeBios");
+		biosRepository.delete(bios);
+		log.info("[purge] biosId={}, boardId={}, treeRoot={}", biosId, boardId, bios.getTreeRootPath());
+	}
 
-    /**
-     * S5-2-2 — BIOS typed-name 검증 후 영구 삭제.
-     * 합성식 : {@code bios.name}.
-     */
-    @Transactional
-    public void purgeWithTypedNameCheck(Long boardId, Long biosId, String typedName) {
-        BoardBIOS bios = requireExistingBios(boardId, biosId);
-        if (!bios.isDeleted()) {
-            throw new IllegalBiosStateException(
-                    "활성/Deprecated 자원은 영구 삭제할 수 없습니다. 먼저 휴지통으로 이동하세요. biosId=" + biosId);
-        }
-        String expected = bios.displayName();
-        if (!expected.equals(typedName)) {
-            throw new TypedNameMismatchException(expected, typedName);
-        }
-        purge(boardId, biosId);
-    }
+	/**
+	 * S5-2-2 — BIOS typed-name 검증 후 영구 삭제.
+	 * 합성식 : {@code bios.name}.
+	 */
+	@Transactional
+	public void purgeWithTypedNameCheck(Long boardId, Long biosId, String typedName) {
+		BoardBIOS bios = requireExistingBios(boardId, biosId);
+		if (!bios.isDeleted()) {
+			throw new IllegalBiosStateException(
+					"활성/Deprecated 자원은 영구 삭제할 수 없습니다. 먼저 휴지통으로 이동하세요. biosId=" + biosId);
+		}
+		String expected = bios.displayName();
+		if (!expected.equals(typedName)) {
+			throw new TypedNameMismatchException(expected, typedName);
+		}
+		purge(boardId, biosId);
+	}
 
-    // ==== 무결성 / marker 재발급 =======================================
+	// ==== 무결성 / marker 재발급 =======================================
 
-    public IntegrityStatus verifyIntegrity(Long boardId, Long biosId) {
-        BoardBIOS bios = requireLiveBios(boardId, biosId);
-        Path treeRoot = Path.of(bios.getTreeRootPath());
-        MarkerContent marker;
-        try {
-            marker = provisionMarkerService.read(treeRoot, MarkerLayout.IN_TREE);
-        } catch (MarkerMissingException e) {
-            return IntegrityStatus.MARKER_MISSING;
-        }
-        if (!provisionMarkerService.verifySignature(marker)) {
-            return IntegrityStatus.SIGNATURE_INVALID;
-        }
-        ManifestSummary recomputed = bundleManifestService.compute(treeRoot);
-        if (!provisionMarkerService.verifyManifestHash(marker, recomputed.manifestHash())) {
-            return IntegrityStatus.TAMPERED;
-        }
-        return IntegrityStatus.ORIGINAL;
-    }
+	public IntegrityStatus verifyIntegrity(Long boardId, Long biosId) {
+		BoardBIOS bios = requireLiveBios(boardId, biosId);
+		Path treeRoot = Path.of(bios.getTreeRootPath());
+		MarkerContent marker;
+		try {
+			marker = provisionMarkerService.read(treeRoot, MarkerLayout.IN_TREE);
+		} catch (MarkerMissingException e) {
+			return IntegrityStatus.MARKER_MISSING;
+		}
+		if (!provisionMarkerService.verifySignature(marker)) {
+			return IntegrityStatus.SIGNATURE_INVALID;
+		}
+		ManifestSummary recomputed = bundleManifestService.compute(treeRoot);
+		if (!provisionMarkerService.verifyManifestHash(marker, recomputed.manifestHash())) {
+			return IntegrityStatus.TAMPERED;
+		}
+		return IntegrityStatus.ORIGINAL;
+	}
 
-    @Transactional
-    public IntegrityStatus verifyAndRecordIntegrity(Long boardId, Long biosId) {
-        IntegrityStatus status = verifyIntegrity(boardId, biosId);
-        requireLiveBios(boardId, biosId).recordIntegritySnapshot(status, Instant.now());
-        return status;
-    }
+	@Transactional
+	public IntegrityStatus verifyAndRecordIntegrity(Long boardId, Long biosId) {
+		IntegrityStatus status = verifyIntegrity(boardId, biosId);
+		requireLiveBios(boardId, biosId).recordIntegritySnapshot(status, Instant.now());
+		return status;
+	}
 
-    // 단건 BIOS marker 재발급 메서드는 위험도가 높아 외부 endpoint 와 함께 제거됨.
-    // 일괄 재발급(secret 회전 시)은 PathReconciliationService.performReissue 가 담당.
-    // 이전 hash → 새 hash audit 로그도 그곳의 일괄 audit 으로 통합.
+	// 단건 BIOS marker 재발급 메서드는 위험도가 높아 외부 endpoint 와 함께 제거됨.
+	// 일괄 재발급(secret 회전 시)은 PathReconciliationService.performReissue 가 담당.
+	// 이전 hash → 새 hash audit 로그도 그곳의 일괄 audit 으로 통합.
 
-    // ==== 내부 헬퍼 =====================================================
+	// ==== 내부 헬퍼 =====================================================
 
-    private BoardModel requireActiveBoard(Long boardId) {
-        return boardModelRepository.findByIdAndIsDeletedFalse(boardId)
-                .orElseThrow(() -> new BoardModelNotFoundException(boardId));
-    }
+	private BoardModel requireActiveBoard(Long boardId) {
+		return boardModelRepository.findByIdAndIsDeletedFalse(boardId)
+				.orElseThrow(() -> new BoardModelNotFoundException(boardId));
+	}
 
-    private BoardBIOS requireLiveBios(Long boardId, Long biosId) {
-        requireActiveBoard(boardId);
-        BoardBIOS bios = biosRepository.findByIdAndBoardModel_Id(biosId, boardId)
-                .orElseThrow(() -> new BiosNotFoundException(boardId, biosId));
-        if (bios.isDeleted()) {
-            throw new IllegalBiosStateException("삭제된 BIOS 에는 수행할 수 없는 작업입니다. biosId=" + biosId);
-        }
-        return bios;
-    }
+	private BoardBIOS requireLiveBios(Long boardId, Long biosId) {
+		requireActiveBoard(boardId);
+		BoardBIOS bios = biosRepository.findByIdAndBoardModel_Id(biosId, boardId)
+				.orElseThrow(() -> new BiosNotFoundException(boardId, biosId));
+		if (bios.isDeleted()) {
+			throw new IllegalBiosStateException("삭제된 BIOS 에는 수행할 수 없는 작업입니다. biosId=" + biosId);
+		}
+		return bios;
+	}
 
-    /**
-     * MK2 — 상태 무관 단건 조회. SoftDeleted 자원에 대한 restore / purge 가 사용한다.
-     * 보드는 활성 상태여야 한다 (삭제된 보드의 BIOS 영구 삭제는 보드 삭제 cascade 가 처리).
-     */
-    private BoardBIOS requireExistingBios(Long boardId, Long biosId) {
-        requireActiveBoard(boardId);
-        return biosRepository.findByIdAndBoardModel_Id(biosId, boardId)
-                .orElseThrow(() -> new BiosNotFoundException(boardId, biosId));
-    }
+	/**
+	 * MK2 — 상태 무관 단건 조회. SoftDeleted 자원에 대한 restore / purge 가 사용한다.
+	 * 보드는 활성 상태여야 한다 (삭제된 보드의 BIOS 영구 삭제는 보드 삭제 cascade 가 처리).
+	 */
+	private BoardBIOS requireExistingBios(Long boardId, Long biosId) {
+		requireActiveBoard(boardId);
+		return biosRepository.findByIdAndBoardModel_Id(biosId, boardId)
+				.orElseThrow(() -> new BiosNotFoundException(boardId, biosId));
+	}
 
-    private static BiosResponse toResponse(BoardBIOS entity) {
-        return new BiosResponse(
-                entity.getId(),
-                entity.getBoardModel().getId(),
-                entity.getName(),
-                entity.getVersion(),
-                entity.getTreeRootPath(),
-                entity.getEntrypointRelativePath(),
-                entity.getManifestHash(),
-                entity.getFileCount(),
-                entity.getTotalBytes(),
-                entity.getDescription(),
-                entity.getLastIntegrityStatus() != null ? entity.getLastIntegrityStatus() : IntegrityStatus.NOT_VERIFIED,
-                entity.isEnabled(),
-                entity.isDeleted(),
-                entity.isDeprecated()
-        );
-    }
+	private static BiosResponse toResponse(BoardBIOS entity) {
+		return new BiosResponse(
+				entity.getId(),
+				entity.getBoardModel().getId(),
+				entity.getName(),
+				entity.getVersion(),
+				entity.getTreeRootPath(),
+				entity.getEntrypointRelativePath(),
+				entity.getManifestHash(),
+				entity.getFileCount(),
+				entity.getTotalBytes(),
+				entity.getDescription(),
+				entity.getLastIntegrityStatus() != null ? entity.getLastIntegrityStatus() : IntegrityStatus.NOT_VERIFIED,
+				entity.isEnabled(),
+				entity.isDeleted(),
+				entity.isDeprecated()
+		);
+	}
 
-    // ==== MK2 — BiosNudgeService 가 사용할 helper (package-private 접근) =================
+	// ==== MK2 — BiosNudgeService 가 사용할 helper (package-private 접근) =================
 
-    /**
-     * MK2 — nudge proceed/replace 후 임시 트리를 ACTIVE 자원으로 영속화한다. 단계 B 의 {@link #addBios}
-     * 흐름 중 entity save + marker write 부분만 재사용. PendingPayload 는 BiosNudgeService 가 nudge
-     * 세션에서 가져와 전달한다.
-     */
-    @Transactional
-    public Long persistFromNudge(Long boardId, com.example.serverprovision.management.common.nudge.ContentNudgePayload payload) {
-        BoardModel parent = requireActiveBoard(boardId);
-        // 활성 (board, version) 재검증 — replace 트랜잭션이 외부에서 별도 commit 됐을 수 있으므로.
-        if (biosRepository.existsByBoardModel_IdAndVersionAndIsDeletedFalse(boardId, payload.version())) {
-            throw new DuplicateBiosVersionException(boardId, payload.version());
-        }
-        Path targetDir = pathPolicyService.assertWritablePath(payload.tempFilePath());
-        String entrypoint = payload.attributes().getOrDefault("entrypointRelativePath", "");
-        int fileCount = Integer.parseInt(payload.attributes().getOrDefault("fileCount", "0"));
-        long totalBytes = Long.parseLong(payload.attributes().getOrDefault("totalBytes", "0"));
-        String description = payload.attributes().getOrDefault("description", "");
+	/**
+	 * MK2 — nudge proceed/replace 후 임시 트리를 ACTIVE 자원으로 영속화한다. 단계 B 의 {@link #addBios}
+	 * 흐름 중 entity save + marker write 부분만 재사용. PendingPayload 는 BiosNudgeService 가 nudge
+	 * 세션에서 가져와 전달한다.
+	 */
+	@Transactional
+	public Long persistFromNudge(Long boardId, com.example.serverprovision.management.common.nudge.ContentNudgePayload payload) {
+		BoardModel parent = requireActiveBoard(boardId);
+		// 활성 (board, version) 재검증 — replace 트랜잭션이 외부에서 별도 commit 됐을 수 있으므로.
+		if (biosRepository.existsByBoardModel_IdAndVersionAndIsDeletedFalse(boardId, payload.version())) {
+			throw new DuplicateBiosVersionException(boardId, payload.version());
+		}
+		Path targetDir = pathPolicyService.assertWritablePath(payload.tempFilePath());
+		String entrypoint = payload.attributes().getOrDefault("entrypointRelativePath", "");
+		int fileCount = Integer.parseInt(payload.attributes().getOrDefault("fileCount", "0"));
+		long totalBytes = Long.parseLong(payload.attributes().getOrDefault("totalBytes", "0"));
+		String description = payload.attributes().getOrDefault("description", "");
 
-        BoardBIOS saved = biosRepository.save(BoardBIOS.builder()
-                .boardModel(parent)
-                .name(payload.name())
-                .version(payload.version())
-                .treeRootPath(targetDir.toString())
-                .entrypointRelativePath(entrypoint)
-                .manifestHash(payload.manifestHash())
-                .markerSignature(null)
-                .fileCount(fileCount)
-                .totalBytes(totalBytes)
-                .description(description.isEmpty() ? null : description)
-                .isEnabled(true)
-                .isDeleted(false)
-                .build());
+		BoardBIOS saved = biosRepository.save(BoardBIOS.builder()
+													  .boardModel(parent)
+													  .name(payload.name())
+													  .version(payload.version())
+													  .treeRootPath(targetDir.toString())
+													  .entrypointRelativePath(entrypoint)
+													  .manifestHash(payload.manifestHash())
+													  .markerSignature(null)
+													  .fileCount(fileCount)
+													  .totalBytes(totalBytes)
+													  .description(description.isEmpty() ? null : description)
+													  .isEnabled(true)
+													  .isDeleted(false)
+													  .build());
 
-        MarkerContent unsigned = new MarkerContent(
-                ResourceType.BIOS_BUNDLE.name(),
-                saved.getId(),
-                Map.of(
-                        "boardId", String.valueOf(boardId),
-                        "version", payload.version(),
-                        "entrypointRelativePath", entrypoint
-                ),
-                Instant.now(),
-                payload.manifestHash(),
-                null
-        );
-        String signature = provisionMarkerService.computeSignature(unsigned);
-        MarkerContent signed = unsigned.withSignature(signature);
-        saved.reissueMarker(payload.manifestHash(), signature);
-        provisionMarkerService.write(targetDir, MarkerLayout.IN_TREE, signed);
-        log.info("[persistFromNudge] biosId={}, boardId={}, version={}", saved.getId(), boardId, payload.version());
-        return saved.getId();
-    }
+		MarkerContent unsigned = new MarkerContent(
+				ResourceType.BIOS_BUNDLE.name(),
+				saved.getId(),
+				Map.of(
+						"boardId", String.valueOf(boardId),
+						"version", payload.version(),
+						"entrypointRelativePath", entrypoint
+				),
+				Instant.now(),
+				payload.manifestHash(),
+				null
+		);
+		String signature = provisionMarkerService.computeSignature(unsigned);
+		MarkerContent signed = unsigned.withSignature(signature);
+		saved.reissueMarker(payload.manifestHash(), signature);
+		provisionMarkerService.write(targetDir, MarkerLayout.IN_TREE, signed);
+		log.info("[persistFromNudge] biosId={}, boardId={}, version={}", saved.getId(), boardId, payload.version());
+		return saved.getId();
+	}
 
-    /**
-     * MK2 — nudge cancel 시 임시 트리 정리. allowed-roots 가드는 cleanup 내부에서 수행.
-     */
-    public void purgeNudgeTempTree(Path tempPath) {
-        bundleTreeCleanupService.purgeExistingTree(tempPath, "nudgeCancel");
-    }
+	/**
+	 * MK2 — nudge cancel 시 임시 트리 정리. allowed-roots 가드는 cleanup 내부에서 수행.
+	 */
+	public void purgeNudgeTempTree(Path tempPath) {
+		bundleTreeCleanupService.purgeExistingTree(tempPath, "nudgeCancel");
+	}
 }
